# group-2

./: .gitignore  README.md
Game/: CMakeLists.txt  CMakeSettings.json  Game.sln  main.cpp
Game/Networking/: ClientGame.cpp  ClientGame.h  ClientNetwork.cpp  ClientNetwork.h  NetworkData.h  NetworkServices.h  ServerGame.cpp  ServerGame.h  ServerNetwork.cpp  ServerNetwork.h  main.cpp
Game/assets/Test/: Test.mtl
Game/assets/barricade/: barricade_wood.mtl  barricade_wood_L2.mtl  barricade_wood_L3.mtl  barricade_wood_L4.mtl  barricade_wood_invalid.mtl
Game/assets/barrier/: barricade_wood.mtl
Game/assets/base/: base.mtl
Game/assets/bear/: bear.mtl  body.mtl  head.mtl  larm.mtl  lleg.mtl  rarm.mtl  rleg.mtl
Game/assets/crystal_rock/: crystal_rock.mtl
Game/assets/dome/: dome.mtl
Game/assets/environment/: environment.mtl
Game/assets/green_projectile/: green_projectile.mtl
Game/assets/laser_projectile/: laser_projectile.mtl
Game/assets/martian/: martian.mtl  martian_fast.mtl  martian_tank.mtl
Game/assets/particle/: testParticle.mtl
Game/assets/particle_dust/: particle_dust.mtl
Game/assets/particle_dust_red/: particle_dust_red.mtl
Game/assets/particle_tesla/: particle_tesla.mtl
Game/assets/paths/: path_corner.mtl  path_straight.mtl
Game/assets/portal/: portal.mtl
Game/assets/powerups/: Rapid_Fire.mtl  Spreadshot.mtl  rapidfire_icon.mtl  spreadshot_icon.mtl
Game/assets/projectiles/: projectile_martian.mtl  projectile_rapidfire.mtl  projectile_rover.mtl  projectile_spreadshot.mtl
Game/assets/railgun/: tower_railgun.mtl  tower_railgun_L2.mtl  tower_railgun_L3.mtl  tower_railgun_L4.mtl  tower_railgun_invalid.mtl
Game/assets/rover/: rover.mtl  rover.mtl.txt  rover_blue.mtl  rover_green.mtl  rover_purple.mtl  rover_red.mtl
Game/assets/rover_projectile/: green_projectile.mtl  projectile_rover.mtl
Game/assets/stone/: crystal_rock.mtl
Game/assets/sungod/: sungod.mtl
Game/assets/tesla/: tower_tesla.mtl  tower_tesla_L2.mtl  tower_tesla_L3.mtl  tower_tesla_L4.mtl  tower_tesla_invalid.mtl
Game/assets/tower/: Tower_L2.mtl  Tower_L3.mtl  Tower_L4.mtl  Tower_invalid.mtl  tower.mtl
Game/assets/tree/: tree.mtl  tree2.mtl
Game/assets/ufo/: ufo_abductor.mtl  ufo_v2.mtl
Game/contrib/zlib/: CTestTestfile.cmake  cmake_install.cmake  zlib.sln
Game/lib/: assimp-vc143-mt.lib
Game/shaders/: gui.frag  gui.vert  instanceShader.vert  martian_shader.vert  model_loading.frag  model_loading.vert  particle.frag  particle.vert  particleShader.frag  portalshader.frag  portalshader.vert  rover_shader.vert  shader.frag  shader.vert  skybox.vert  smokeVert.vert  teslaEffectShader.frag  teslaEffectShader.vert  ufo_shader.frag  ufo_shader.vert
Game/src/: ClientGame.cpp  ClientGame.h  ClientNetwork.cpp  ClientNetwork.h  EntityComponentSystem.cpp  EntityComponentSystem.h  GameConstants.h  LoadingHelper.cpp  LoadingHelper.h  NetworkData.h  NetworkServices.cpp  NetworkServices.h  PoissonDisk.cpp  PoissonDisk.h  Prefabs.cpp  Prefabs.h  ServerGame.cpp  ServerGame.h  ServerNetwork.cpp  ServerNetwork.h
Game/src/audio/: AudioManager.cpp  AudioManager.h
Game/src/graphics/: Camera.cpp  Camera.h  Cube.cpp  Cube.h  Effects.cpp  Effects.h  GameWindow.cpp  GameWindow.h  GameWorld.cpp  GameWorld.h  Health.cpp  Health.h  LoadingHelper.cpp  LoadingHelper.h  Mesh.h  Mob.cpp  Mob.h  ObjectModel.h  ParticleGenerator.cpp  ParticleGenerator.h  Player.cpp  Player.h  Projectile.cpp  Projectile.h  RenderEntity.cpp  RenderEntity.h  Resource.cpp  Resource.h  Shader.cpp  Shader.h  Skybox.cpp  Skybox.h  Text.cpp  Text.h  Tower.cpp  Tower.h  core.h
Game/src/graphics/gui/: GUIElement.cpp  GUIElement.h
enc_temp_folder/685bebda7370f341fe13316086f9a83/: GameWorld.cpp
